# torchmanager-diffusion

./: .gitignore  README.md  eval.ipynb  eval.py  eval_0.sh  eval_1.sh  eval_100.ipynb  eval_bk.ipynb  plot.ipynb  pyproject.toml  test_backward.ipynb  train.py  train_0.sh  train_1.sh
data/: __init__.py  datasets.py
diffusion/: __init__.py  manager.py  version.py
diffusion/configs/: eval.py  train.py
diffusion/data/: __init__.py  diffusion.py  unsupervised.py
diffusion/managers/: __init__.py  base.py  conditional.py  ddpm.py  diffusion.py  latent.py  protocols.py  sde.py
diffusion/metrics/: __init__.py  diversity.py  iou.py  lpips.py
diffusion/networks/: __init__.py  builder.py  loader.py  unet.py
diffusion/nn/: __init__.py  diffusion.py  protocols.py
diffusion/nn/diffusion/: __init__.py  ddpm.py  diffusion.py  fast_sampling.py  latent.py  parallel.py  protocols.py  sde.py
diffusion/optim/: ema.py
diffusion/scheduling/: __init__.py  scheduler.py  space.py
diffusion/sde/: base.py
tests/: test_0100.py  test_0101.py  test_0102.py
