[tool.poetry]
name = "torchmanager-diffusion"
version = "0.1.18a"
description = "Torchmanager Implementation for Diffusion Model (v0.1.18 alpha)"
authors = ["Kison Ho <unfit-gothic.0q@icloud.com>"]
packages = [
    { include = "diffusion" }
]

[tool.poetry.dependencies]
python = "^3.9"
torchmanager = "^1.2rc5"
einops = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"