[tool.poetry]
name = "torchmanager-diffusion"
version = "1.2a4"
description = "Torchmanager Implementation for Diffusion Model (v1.2 Alpha 4)"
authors = ["Kison Ho <unfit-gothic.0q@icloud.com>"]
packages = [
    { include = "diffusion" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torchmanager = "^1.2"
einops = "*"
lpips = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"