[tool.poetry]
name = "torchmanager-diffusion"
version = "1.3a1"
description = "Torchmanager Implementation for Diffusion Model (v1.3 Alpha 1)"
authors = ["Kison Ho <unfit-gothic.0q@icloud.com>"]
packages = [
    { include = "diffusion" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
einops = "*"
torchmanager = "^1.5a1"
torchvision = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
